# json-syntax

./: .gitignore  .pyre_configuration  LICENSE  README.md  TYPES.md  pyproject.toml  setup.cfg  test-via-docker.sh  tox.ini
.circleci/: config.yml
json_syntax/: __init__.py  __init__.pyi  action.py  action_v1.py  action_v1.pyi  attrs.py  attrs.pyi  cache.py  cache.pyi  convert.py  errors.py  helpers.py  helpers.pyi  pattern.py  pattern.pyi  product.py  ptypes.py  registry.py  ruleset.py  ruleset.pyi  std.py  std.pyi  string.py  types.py  unions.py  unions.pyi
json_syntax/examples/: __init__.py  flags.py  flags.pyi  loose_dates.py  loose_dates.pyi
json_syntax/extras/: README.md  dynamodb.py  flags.py  json_schema.py  loose_dates.py
tests/: _strategies.py  common.py  test_attrs.py  test_cache.py  test_errors.py  test_helpers.py  test_idea.py  test_registry.py  test_std.py  test_std_ruleset.py  test_types.py  test_union.py  test_union_prop.py  type_strategies.py  types_attrs_ann.py  types_attrs_common.py  types_attrs_noann.py  types_std_ann.py  types_std_noann.py
tests/examples/: test_loose_dates.py
tests/extras/: test_dynamodb.py  test_flags.py  test_loose_dates.py
