[tool.poetry]
name = "json-syntax"
version = "2.0.0"
description = "Generates functions to convert Python classes to JSON dumpable objects."
authors = ["Ben Samuel <bsamuel@unitedincome.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UnitedIncome/json-syntax"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.5"
python-dateutil = {version="^2.7", python = "<3.7"}

[tool.poetry.dev-dependencies]
pytest = "^4.1"
attrs = "^18.2"
pytest-cov = "^2.6"
black = {version = "^19.3-beta.0",allows-prereleases = true,python = ">=3.7"}
hypothesis = "^4.14"

[tool.black]
line-length = 88
target-version = ["py35"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_builds = true
envlist = py35, py36, py37, py38
skipsdist = true

[testenv]
deps =
    poetry
commands =
    poetry install
    poetry run pytest {posargs}
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
