[tool.poetry]
name = "json-syntax"
version = "2.2.0"
description = "Generates functions to convert Python classes to JSON dumpable objects."
authors = ["Ben Samuel <bsamuel@unitedincome.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UnitedIncome/json-syntax"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.4"
python-dateutil = {version="^2.7", python = "<3.7"}
typing = {version = "^3.7", python = "<3.5"}

[tool.poetry.dev-dependencies]
pytest = "^4.1"
attrs = "^18.2"
pytest-cov = "^2.6"
black = {version = "^19.3-beta.0", allow-prereleases = true, python = ">=3.7"}
hypothesis = "^4"
dataclasses = {version="0.4", python = ">=3.6,<3.7"}
typing-extensions = {version = "^3.7", python = "<3.8"}

[tool.black]
line-length = 88
target-version = ["py34"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
